# genshin_banner_parser

./: .gitignore  pyproject.toml
banner_parser/: __init__.py  models.py
tests/: test_banner_parser.py
