[tool.poetry]
name = "banner_parser"
version = "0.1.0"
description = ""
authors = ["gwy15 <gwy15thu@gmail.com>"]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.scripts]
main = "banner_parser:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
